--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 * {
-    box-sizing: border-box;    
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Nunito', sans-serif;
     margin: 0;
-    
-    background-color: #F8F8F8;
+
+    /*background-color: #F8F8F8;*/
     padding: 0;
 }
 
@@ -19,7 +19,7 @@ body {
 
   display:flex;
   justify-content: flex-start;
- 
+
   font-size: 18px;
 
    align-items: center;
@@ -50,7 +50,7 @@ body {
  }
 
  .ModularPatternElements-header_icon div{
- 
+
   margin-left: 1em;
   margin-right: 1em;
  }
@@ -121,7 +121,7 @@ body {
    margin:2em;
 
   height:120px;
-  
+
    background-color: #F9D1CE;
    text-align: center;
    padding-top: 10%;
@@ -157,9 +157,9 @@ body {
  }
 
  .Product_Review_form div{
- 
+
   height:600px;
-   
+
   margin:5%;
 
   flex-basis:50%;
@@ -167,7 +167,7 @@ body {
 
  .img_product img{
   width: 50%;
-   
+
 
  }
 
@@ -183,7 +183,7 @@ body {
  }
 
   .detail_project h3{
-  
+
     padding-top: 3em;
 
 
@@ -197,7 +197,7 @@ body {
     font-size: 16px;
     padding-left: 1em;
     padding-right: 1em;
-    border-color: #272727;    
+    border-color: #272727;
     border-radius: 15px;
     outline: none;
 }
@@ -211,7 +211,7 @@ body {
 
 
     .reviewPart div h4{
-   
+
         margin-left: 20%;
         margin-right: 20%;
     }
@@ -223,7 +223,7 @@ body {
       .reviewPart div input{
       margin-left: 20%;
       padding-right: 40%;
-    
+
     }
       .reviewPart div p{
         margin-left: 20%;
@@ -233,19 +233,20 @@ body {
 #comments {
     outline: none;
     border-color: black;
-    border: 1px solid black;   
+    border: 1px solid black;
     padding-right: 50%;
     font-size: 16px;
-    border-left: white;
+  /*  border-left: white;
     border-right: white;
-    border-top:white;
+    border-top:black;*/
+    padding-bottom:  8%;
 
 
 }
 
 
         .reviewPart div h3{
-        
+
         margin-left: 20%;
         text-align: left;
         margin-right: 20%;
@@ -262,6 +263,12 @@ body {
    padding-right: 6em;
   }
 
+  .detail_icon{
+     margin-left: 20%;
+     margin-top: -1em;
+      margin-bottom:1em;
+  }
+
 
        .reviewPart div h3 a{
         color: black;
@@ -270,7 +277,7 @@ body {
 
       .reviewPart div h3 a:hover{
         color: #EBCA94;
-        
+
     }
 
     .reviewPart h3 a{
@@ -286,6 +293,76 @@ body {
         background-color: white;
         padding-top: 1%;
     }
+
+
+
+
+.detail_structure{
+  margin-top: 3%;
+  display:flex;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-bottom: 4%;
+ }
+ .detail_structure div{
+   margin:2em;
+
+  height:120px;
+
+   /*background-color: #F9D1CE;*/
+   /*text-align: center;*/
+   /*padding-top: 20%;*/
+   flex-basis:50%;
+    /*padding-bottom: 20%;*/
+ }
+
+
+
+    .detail_left{
+       padding-top: 20%;
+       padding-bottom: 20%;
+      background-image: url(img/DoubleDiamondOpenRing.png);
+
+  background-size: cover;
+
+    background-repeat: no-repeat;
+
+  display:flex;
+
+  justify-content: center;
+
+  flex-direction: column;
+    }
+
+
+    .detail_right{
+         /*    padding-top: 20%;*/
+      padding-bottom: 40%;
+      background-color: white;
+    }
+
+
+
+
+    /*detail 2 start*/
+    .detail2_left{
+      background-image: url(img/S-PearlSignetRing.png);
+     padding-top: 20%;
+       padding-bottom: 20%;
+
+  background-size: cover;
+
+    background-repeat: no-repeat;
+
+  display:flex;
+
+  justify-content: center;
+
+  flex-direction: column;
+    }
+
+
+
 
 
 
@@ -311,18 +388,119 @@ body {
   display:flex;
   margin-left: 8%;
   margin-right: 8%;
+  margin-bottom: 4%;
  }
  .about_structure div{
    margin:2em;
 
   height:120px;
-  
-   background-color: #F9D1CE;
-   text-align: center;
-   padding-top: 30%;
+
+   /*background-color: #F9D1CE;   pink*/
+   /*text-align: center;*/
+   /*padding-top: 30%;*/
    flex-basis:50%;
-    padding-bottom: 30%;
+    /*padding-bottom: 30%;*/
  }
+
+
+
+
+
+
+ .about_left{
+  background-image: url(img/about_img.jpg);
+   padding-top: 30%;
+ padding-bottom: 30%;
+
+  background-size: cover;
+
+    background-repeat: no-repeat;
+
+  display:flex;
+
+  justify-content: center;
+
+  flex-direction: column;
+/*  text-align:center;
+   align-items: center;*/
+
+
+
+
+ }
+
+
+ .about_company{
+  text-align: center;
+  margin-top: 4%;
+ }
+
+
+ .about_right h2{
+ padding-top: -50%;
+ }
+
+
+@media screen and (max-width:700px){
+ .about_structure {
+  flex-direction: column;
+
+ }
+
+
+
+
+
+
+
+
+
+
+ .about_structure div{
+  padding-top: 60%;
+  padding-bottom: 60%;
+
+}
+
+
+}
+
+@media screen and (max-width:1400px){
+  .detail_structure {
+    flex-direction: column;
+ }
+
+
+  .detail_left{
+  padding-top: 50%;
+  padding-bottom: 50%;
+
+}
+
+.detail_right{
+  padding-bottom:  1%;
+}
+
+
+
+
+
+  .detail2_left{
+  padding-top: 50%;
+  padding-bottom: 50%;
+
+}
+
+.detail2_right{
+  padding-bottom:  1%;
+}
+
+}
+
+
+
+
+
 
 
 
@@ -330,5 +508,130 @@ body {
 
 
 
+/*home page start*/
 
 
+
+
+.home_imgPart{
+  height: 70vh;
+
+  background-image:url("img/home_main.png");
+    /*background-image:url("img/home_img2.png");*/
+
+
+
+
+  background-size: 100%;
+
+    background-repeat: no-repeat;
+
+  display:flex;
+
+  justify-content: center;
+
+  flex-direction: column;
+  text-align:center;
+   align-items: center;
+}
+
+.home_imgPart h2{
+  color:#272727;
+  font-size:3vw;
+  /*margin-bottom: 3%;*/
+
+}
+
+
+
+.home_imgPart a{
+  padding-left:4em;
+  padding-right:4em;
+}
+
+
+
+
+ .img_button{
+     background-color: #EBCA94;
+     padding:0.5em 2em;
+     color:#FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+
+
+ }
+
+ .img_button:hover{
+     background-color: #FDFBFB;
+       border-radius:15px;
+     color: #EBCA94;
+     transition: all 1s;
+
+ }
+
+
+
+
+
+
+
+/*new arrive start*/
+
+
+
+.newarrive_title{
+  margin-top: 6%;
+}
+
+
+.newArrive_list{
+  display:flex;
+  justify-content: center;
+  margin-top:2em;
+  text-align:center;
+}
+
+
+.newArrive_list>div{
+  flex-basis: 26%;
+  margin:0 1em;
+}
+
+.newArrive_list>div img{
+  width:65%;
+}
+
+
+
+
+@media screen and (max-width:700px){
+.newArrive_list{
+flex-direction: column;
+}
+
+.newArrive_list>div{
+  margin-top: 3%;
+}
+
+
+
+
+}
+
+
+
+/*new arrive end*/
+
+
+
+
+
+
+
+
+
+
+
+/*home page end*/
