--- a/main2.css
+++ b/main2.css
@@ -192,18 +192,20 @@ flex-basis:50%;
 
 
 .address div{
-width: 200%;
-height:150px;
-background-color: #F9D1CE;
-text-align: center;
+width: 30%;
 padding-top: 30%;
 flex-basis:50%;
 padding-bottom: 30%;
 }
 
+.contact_img{
+  width:70%;
+}
+
 .contact_form{
-margin-left:35%;
-margin-top:5%;
+margin-left:10%;
+margin-right:15%;
+margin-top:6%;
 
 }
 
@@ -212,6 +214,8 @@ outline: none;
 border-color: black;
 border: 1px solid black;   
 padding-right: 4em;
+width:300px;
+height:50px;
 }
 
 #emailInput {
@@ -219,6 +223,8 @@ outline: none;
 border-color: black;
 border: 1px solid black;   
 padding-right: 4em;
+width:300px;
+height:50px;
 }
 
 #msgInput {
@@ -227,6 +233,7 @@ border-color: black;
 border: 1px solid black;   
 padding-right: 4em;
 height:100px;
+width:300px;
 }
 
 .submit_button {
@@ -250,3 +257,20 @@ margin-top:8%;
 text-align: center;
 }
 /*contact page end*/
+
+/*cart page start*/
+.cart_list{
+  display:flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+
+
+.cart_img{
+  width:15%;
+  margin-top:5%;
+  margin-left:9%;
+}
+
+
+/*cart page end*/
