--- a/main.css
+++ b/main.css
@@ -210,6 +210,66 @@ body {
 }
 
 
+
+
+.button_link:hover {
+    color: #EBCA94;
+    border: 2px solid #EBCA94;
+}
+
+
+.button_link{
+  text-decoration: none;
+}
+
+.button_link{
+      /*border-color: red;*/
+  /*background-color: #FDFBFB;*/
+    font-size: 16px;
+    padding-left: 1em;
+    padding-right: 1em;
+    /*border-color: #272727;*/
+border: 2px solid #272727;
+    border-radius: 15px;
+    outline: none;
+    color: #272727;
+
+}
+
+
+
+
+/* .img_button{
+     background-color: #EBCA94;
+     padding:0.5em 2em;
+     color:#FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+
+
+ }
+
+ .img_button:hover{
+     background-color: #FDFBFB;
+       border-radius:15px;
+     color: #EBCA94;
+     transition: all 1s;
+
+ }*/
+
+
+
+
+
+
+
+
+
+
+
+
+
     .reviewPart div h4{
 
         margin-left: 20%;
