add some new css for home page

--- a/main.css
+++ b/main.css
@@ -92,6 +92,78 @@ body {
 
 /*navigation end*/
 
+
+/*phone view navigation start*/
+ .phoneView_nav{
+    display:none;
+ }
+
+.phoneView_nav i{
+    color:#FFA8A8;
+    font-size:22pt;
+    
+    margin:0.3rem;
+  
+
+ }
+
+
+
+ @media screen and (max-width:420px){
+ 
+
+  .phoneView_nav{
+    display:block;
+  }
+
+  .ModularPatternElements-header nav{
+    display:none;
+  }
+
+  .ModularPatternElements-header a{
+    display:block;
+  }
+
+
+    .ModularPatternElements-header nav{
+   flex-direction: column;
+  }
+  .ModularPatternElements-header nav>a{
+   
+   text-align:center;
+   width: 100%;
+  }
+
+ /*  .Melody_nav:hover{
+  color:#EBCA94;*/
+
+
+
+ .ModularPatternElements-header_icon{
+  justify-content: space-between;
+ }
+
+ }
+
+
+
+}
+
+
+
+
+
+
+
+
+
+ /*phone view navigation end*/
+
+
+
+
+
+
 /*main image begin*/
 .main_img{
   border: 2px solid #272727;
@@ -128,6 +200,56 @@ body {
    flex-basis:33.3%;
     padding-bottom: 10%;
  }
+
+
+
+
+
+.newArrive_img:hover{
+ 
+transform: scale(1.1);
+
+}
+
+.newArrive_img{
+transition: all 0.6s;
+}
+
+.text a:hover{
+color: #EBCA94;
+
+}
+
+.text a{
+color: #272727;
+text-decoration: none;
+}
+
+
+.newArrive_img:hover{
+ 
+  transform: scale(1.1);
+
+}
+
+.price a {
+text-decoration: none;
+color: #272727
+
+}
+
+.price a:hover{
+color: #EBCA94;
+
+}
+
+
+
+
+
+
+
+
 
 /*new arrive end*/
 
@@ -628,6 +750,14 @@ border: 2px solid #272727;
        border-radius:15px;
      color: #EBCA94;
      transition: all 1s;
+
+ }
+
+
+  @media screen and (max-width:700px){
+  .ModularPatternElements-header{
+   flex-direction: column;
+  }
 
  }
 
