--- a/main.css
+++ b/main.css
@@ -78,9 +78,14 @@ body {
 
  #Melody_logo{
     font-size: 24px;
-    color: #EBCA94;
+    color: #272727;
 
  }
+
+ #Melody_logo:hover{
+  color:#EBCA94;
+ }
+
 
 
 
@@ -356,6 +361,7 @@ border: 2px solid #272727;
     outline: none;
     color: #272727;
 
+
 }
 
 
@@ -382,9 +388,24 @@ border: 2px solid #272727;
 
 
 
+.priceAndNumber{
+  display: flex;
+  margin-top: -2%;
+
+}
+
+.priceAndNumber h5{
+  margin-left: 4%;
+}
 
 
 
+#quantity{
+
+  margin-right: 4%;
+  margin-bottom: 4%;
+
+}
 
 
 
@@ -422,6 +443,8 @@ border: 2px solid #272727;
     border-right: white;
     border-top:black;*/
     padding-bottom:  8%;
+    margin-bottom: 2%;
+    text-align: center;
 
 
 }
@@ -474,6 +497,7 @@ border: 2px solid #272727;
     .reviewPart{
         background-color: white;
         padding-top: 1%;
+        /*border:2px solid red;*/
     }
 
 
@@ -486,7 +510,7 @@ border: 2px solid #272727;
   margin-right: 8%;
   margin-bottom: 4%;
  }
- .detail_structure div{
+ .detail_structure .detail_left{
    margin:2em;
 
   height:120px;
@@ -496,13 +520,39 @@ border: 2px solid #272727;
    /*padding-top: 20%;*/
    flex-basis:50%;
     /*padding-bottom: 20%;*/
+     padding-bottom: 43%;
+    /*border: 2px solid red;*/
+ }
+
+
+ .detail_structure .detail_right{
+   margin:2em;
+
+  height:120px;
+
+   /*background-color: #F9D1CE;*/
+   /*text-align: center;*/
+   /*padding-top: 20%;*/
+   flex-basis:50%;
+    /*padding-bottom: 20%;*/
+     padding-bottom: 43%;
+    /*border: 2px solid red;*/
+ }
+
+ .detail_right h2{
+  margin-top: 0%;
  }
 
 
 
+
+
+
+
     .detail_left{
-       padding-top: 20%;
-       padding-bottom: 20%;
+      
+
+
       background-image: url(img/DoubleDiamondOpenRing.png);
 
   background-size: cover;
@@ -517,6 +567,12 @@ border: 2px solid #272727;
     }
 
 
+
+
+
+
+
+
     .detail_right{
          /*    padding-top: 20%;*/
       padding-bottom: 40%;
@@ -529,7 +585,6 @@ border: 2px solid #272727;
     /*detail 2 start*/
     .detail2_left{
       background-image: url(img/S-PearlSignetRing.png);
-     padding-top: 20%;
        padding-bottom: 20%;
 
   background-size: cover;
@@ -543,6 +598,128 @@ border: 2px solid #272727;
   flex-direction: column;
     }
 
+
+ .detail_structure .detail2_left{
+   margin:2em;
+
+  height:120px;
+
+   /*background-color: #F9D1CE;*/
+   /*text-align: center;*/
+   /*padding-top: 20%;*/
+   flex-basis:50%;
+    /*padding-bottom: 20%;*/
+     padding-bottom: 43%;
+    /*border: 2px solid red;*/
+ }
+
+
+ @media screen and (max-width:1000px){
+  .detail_structure .detail_right{
+    padding-bottom: 0%;
+  }
+
+  #comments{
+    padding-right: 40%;
+  }
+
+}
+
+ @media screen and (max-width:500px){
+    #comments{
+    /*padding-right: 40%;*/
+    margin-bottom: 5%;
+    text-align: center;
+  }
+
+  .comments_button{
+    margin-left: 20%;
+    margin-bottom: 20%;
+  }
+
+  .footer_part{
+    margin-top: 10%;
+  }
+
+
+.detail_structure{
+  margin-top: 3%;
+  display:flex;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 4%;
+ }
+
+
+.reviewPart div h4{
+
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .reviewPart div label{
+      margin-left:  10%;
+    }
+
+      .reviewPart div input{
+      margin-left: 10%;
+      padding-right: 20%;
+
+    }
+      .reviewPart div p{
+        margin-left: 10%;
+      }
+
+
+ .detail_icon{
+     margin-left: 10%;
+     margin-top: -1em;
+      margin-bottom:1em;
+  }
+
+        .reviewPart div h3{
+
+        margin-left: 10%;
+        text-align: left;
+        margin-right: 10%;
+        margin-top: -1%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+ }
+
+
+
+.comments_button{
+     background-color: #EBCA94;
+     padding:0.5em 2em;
+     color:#FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+    margin-left: 45%;
+
+
+
+ }
+
+ .comments_button:hover{
+     background-color: #FDFBFB;
+       border-radius:15px;
+     color: #EBCA94;
+     transition: all 0.5s;
+     border: 2px solid #EBCA94;
+
+ }
 
 
 
@@ -575,18 +752,42 @@ border: 2px solid #272727;
 
 
  }
- .about_structure div{
+
+
+
+
+ .about_structure .about_left{
    margin:2em;
 
   height:120px;
 
-   background-color: #F9D1CE;   pink
+   background-color: white;   pink
+   padding-top: 30%;
+   flex-basis:50%;
+    padding-bottom: 60%;
+
+
+ }
+
+
+
+ .about_structure .about_right{
+   margin:1%;
+
+  height:120px;
+
+   background-color: white;   pink
    /*text-align: center;*/
    padding-top: 30%;
    flex-basis:50%;
-    padding-bottom: 30%;
+    padding-bottom: 60%;
+    /*margin-top: 0%;*/
+
+
 
  }
+
+
 
 
 
@@ -607,9 +808,9 @@ border: 2px solid #272727;
   flex-direction: column;
 /*  text-align:center;
    align-items: center;*/
-
+/*
    padding-top: 30%;
- padding-bottom: 30%;
+ padding-bottom: 30%;*/
 
 
 
@@ -634,8 +835,8 @@ border: 2px solid #272727;
 
 
 .about_right{
-  padding-top: 30%;
- padding-bottom: 30%;
+  /*padding-top: 30%;*/
+ /*padding-bottom: 80%;*/
 }
 
 @media screen and (max-width:700px){
@@ -661,6 +862,26 @@ border: 2px solid #272727;
 
 
 }
+
+
+
+
+@media screen and (max-width:1200px){
+   .about_structure{
+     flex-direction: column;
+
+   }
+
+
+
+    .about_structure .about_right{
+      padding-top: 0%;
+      padding-bottom: 10%;
+
+    }
+
+ }
+
 
 @media screen and (max-width:1400px){
   .detail_structure {
