--- a/main2.css
+++ b/main2.css
@@ -13,6 +13,18 @@ body {
 
 /*navigation start*/
 
+
+ #Melody_logo{
+    font-size: 24px;
+    color: #272727;
+
+ }
+
+ #Melody_logo:hover{
+  color:#EBCA94;
+ }
+
+
 .ModularPatternElements-header_nav{
 
 display:flex;
@@ -64,17 +76,6 @@ text-decoration:none;
 padding:0.5em 0.5em;
 }
 
-.Melody_nav:hover{
-color:#EBCA94;
-
-}
-
-
-#Melody_logo{
-  font-size: 24px;
-  color: #EBCA94;
-
-}
 
 
 #wholeModularPatternElements{
@@ -271,59 +272,179 @@ text-align: center;
 
 /*footer part end*/
 
-/*contact page start*/
-.contact{
-margin-top: 3%;
-display:flex;
-margin-left: 9%;
-flex-basis:50%;
+
+
+
+/*contact page new start*/
+
+
+
+
+.about_page{
+  display:flex;
+  justify-content: center;
+  margin-left: 8%;
+   margin-right: 8%;
+    margin-top:3em;
+  text-align:center;
+
+}
+
+.about_page a{
+  color:black;
+}
+
+.about_right{
+  text-align: left;
+
 }
 
 
-.address div{
-width: 30%;
-padding-top: 30%;
-flex-basis:50%;
-padding-bottom: 30%;
-}
+.about_left{
+  text-align: left;
 
-.contact_img{
-  width:70%;
-}
-
-.contact_form{
-margin-left:10%;
-margin-right:15%;
-margin-top:6%;
 
 }
+
+
+
+.about_page>div{
+  /*border:1px solid red;*/
+  flex-basis: 50%;
+  margin:0 1em;
+
+
+}
+
+.about_page>div img{
+  width:95%;
+}
+
+
 
 #nameInput {
 outline: none;
 border-color: black;
 border: 1px solid black;   
-padding-right: 4em;
-width:300px;
-height:50px;
+/*padding-right: 4em;*/
+width:95%;
+/*height:50px;*/
+height: 5vh;
+margin-top: -6%;
+background-color: #FFF9F9;
+
 }
+
 
 #emailInput {
 outline: none;
 border-color: black;
 border: 1px solid black;   
-padding-right: 4em;
-width:300px;
-height:50px;
+/*padding-right: 4em;*/
+width:95%;
+/*height:50px;*/
+height: 5vh;
+margin-top: -6%;
+background-color: #FFF9F9;
+
+
 }
+
+
 
 #msgInput {
 outline: none;
 border-color: black;
 border: 1px solid black;   
-padding-right: 4em;
-height:100px;
-width:300px;
+/*padding-right: 4em;*/
+width:95%;
+/*height:50px;*/
+height: 20vh;
+margin-top: -1%;
+background-color: #FFF9F9;
+
+
 }
+
+
+#subjectInput {
+outline: none;
+border-color: black;
+border: 1px solid black;   
+/*padding-right: 4em;*/
+width:95%;
+/*height:50px;*/
+height: 5vh;
+margin-top: -6%;
+background-color: #FFF9F9;
+
+
+}
+
+
+/*reference https://www.w3schools.com/tags/tag_input.asp*/
+
+
+@media screen and (max-width:1000px){
+
+.about_page{
+    flex-direction: column;
+}
+
+.about_page>div img{
+  width:100%;
+}
+
+.contact_form {
+padding-top: 10%;
+padding-bottom: 8%;
+
+}
+
+}
+
+
+
+.button{
+  margin-top: 7%;
+  margin-bottom: 2%;
+}
+
+.comments_button_about{
+     background-color: #EBCA94;
+     padding:0.5em 2em;
+     color: #FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+    /*margin-left: 1%;*/
+       border: 2px solid #FDFBFB;
+       margin-bottom: 3%;
+
+
+
+
+ }
+
+ .comments_button_about:hover{
+     background-color: #FDFBFB;
+       border-radius:15px;
+     color: #EBCA94;
+     transition: all 0.5s;
+     border: 2px solid #EBCA94;
+
+ }
+
+
+
+
+
+.contact_form{
+  margin-top: 0%;
+  /*border:2px solid red;*/
+
+}
+/*contact page new end */
 
 .submit_button {
 background-color: white;
@@ -347,145 +468,108 @@ text-align: center;
 }
 /*contact page end*/
 
-/*cart page start*/
-.main_cart{
-  width:100%;   
+
+/*cart update start*/
+
+
+
+/*cart page begin*/
+.cartPage_cart{
+  width:90%;
+  margin:auto;
+  /*border:1px solid red;*/
+  margin-top: 3%;
 }
 
-.cartpage{
+.item{
+  text-align: left;
+}
+
+.cart_img{
+  width: 50%;
+
+  margin-left: -80%;
+
+  
+}
+
+
+.remove_button:hover{
+   color: #EBCA94;
+
+
+}
+
+
+.line{
+  width: 90%;
+}
+
+
+.checkOut_button{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3%;
+}
+
+
+.cartPage_cart_list{
   width:100%;
-  margin-bottom: 20%;
-  padding-left: 5%;
 }
 
-.cart_name{
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-top: 2%;
+.cartPage_cart_list td{
+  text-align:center;
 }
+
 
 .cart_img{
   width:120px;
   margin-top: 10%;
 }
 
-/*citation:https://www.bbsmax.com/A/gGdX0BQWd4/*/
-ul,
-            li {
-                list-style: none;
-            }
- 
-            a {
-                text-decoration: none;
-            }
- 
-            a:hover {
-                cursor: pointer;
-                text-decoration: none;
-            }
- 
-            a:link {
-                text-decoration: none;
-            }
- 
-            img {
-                vertical-align: middle;
-            }
- 
-            .btn-numbox {
-                overflow: hidden;
-                margin-top: 20px;
-            }
- 
-            .btn-numbox li {
-                float: right;
-            }
- 
- 
-            .btn-numbox .count {
-                overflow: hidden;
-                margin: 0 16px 0 -20px;
-            }
- 
-            .btn-numbox .count .num-minus,
-            .input-num,
-            .num-add {
-                display: inline-block;
-                width: 28px;
-                height: 28px;
-                line-height: 28px;
-                text-align: center;
-                font-size: 18px;
-                color: #999;
-                cursor: pointer;
-                border: 1px solid #e6e6e6;
-            }
-            .btn-numbox .count .input-num {
-                width: 58px;
-                height: 26px;
-                color: #333;
-            }
 
-.cart_price{
-  text-align: right;
-  font-size: 16px;
-  font-family: bold;
-  padding-right:8%;
-}
 
-/*citation:https://blog.csdn.net/alex8046/article/details/51917069*/
-.line{
-  filter: alpha(opacity=100,finishopacity=0,style=3);
-  width:90%;
-  color:#987cb9;
-}
-
-.total_price{
+.total_price_part{
   text-align: right;
   margin-right:5%;
 }
 
-.checkout_button {
-  background-color: white;
-  font-size: 16px;
-  color: #272727;       /*black*/
-  padding-left: 2em;
-  padding-right: 2em;
-  border-color: #272727;    
-  border-radius: 15px;
-  outline: none;
+
+
+@media screen and (max-width:1200px){
+
+  .cart_img{
+  width: 50%;
+
+  margin-left: -50%;
   }
   
-  .checkout_button:hover {
-  color: #EBCA94;
-  border: 2px solid #EBCA94;
-  }
+}
+
+
+@media screen and (max-width:500px){
+
+  .cart_img{
+  width: 50%;
+
+  margin-left: -50%;
+
   
-  .button2 {
-  margin-top:2%;
-  margin-right:5%;
-  text-align: right;
-  }
+}
 
-  .delete_button {
-    background-color: white;
-    font-size: 16px;
-    color: #272727;     
-    padding-left: 2em;
-    padding-right: 2em;
-    border-color: #272727;    
-    border-radius: 15px;
-    outline: none;
-    }
-    
-    .delete_button:hover {
-    color: #EBCA94;
-    border: 2px solid #EBCA94;
-    }
+.total_price_part{
+  margin-top: 6%;
 
-    .button3 {
-      margin-top:2%;
-      margin-right:30%;
-      text-align: right;
-      }
-/*cart page end*/
+
+}
+
+.comments_button_about{
+  margin-bottom: 20%;
+}
+
+}
+
+
+
+
+/*cart update end*/
