--- a/main2.css
+++ b/main2.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Nunito', sans-serif;
+  /*reference:https://fonts.google.com/specimen/Nunito?sidebar.open&selection.family=Nunito;*/
   margin: 0;
   
   background-color: #F8F8F8;
@@ -88,76 +89,6 @@ padding:0.5em 0.5em;
 /*navigation end*/
 
 
-/*phone view navigation start*/
- .phoneView_nav{
-    display:none;
- }
-
-.phoneView_nav i{
-    color:#FFA8A8;
-    font-size:22pt;
-    
-    margin:0.3rem;
-  
-
- }
-
-
-
- @media screen and (max-width:420px){
- 
-
-  .phoneView_nav{
-    display:block;
-  }
-
-  .ModularPatternElements-header nav{
-    display:none;
-  }
-
-  .ModularPatternElements-header a{
-    display:block;
-  }
-
-
-    .ModularPatternElements-header nav{
-   flex-direction: column;
-  }
-  .ModularPatternElements-header nav>a{
-   
-   text-align:center;
-   width: 100%;
-  }
-
-.ModularPatternElements-header{
-  flex-direction: column;
-}
-
-
-
- .ModularPatternElements-header_icon{
-  justify-content: space-between;
- }
-
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
- /*phone view navigation end*/
-
-
-
-
 
 
 
@@ -193,7 +124,7 @@ color:#EBCA94;
 .submenu_nav2:hover{
 color:#EBCA94;
 }
-/*product list submenu end*/
+
 
 .product_list{
 display:flex;
@@ -251,6 +182,12 @@ color: #EBCA94;
     flex-direction: column;
 }
 
+.ModularPatternElements-submenu_nav{
+font-size: 18px;
+text-align: center;
+margin-top: 10%;
+}
+
 }
 
 
@@ -259,19 +196,8 @@ color: #EBCA94;
 /*product list end*/
 
 /*footer part start*/
-/*.footer_part{
-background-color: #FEEBEB;
-padding-top: 0.2%;
-padding-bottom: 0.2%;
-margin-top: 3%;
-}
-
-.footer_part h4 {
-
-text-align: center;
 
 
-}*/
 
 .footer_link a{
   display: block;
@@ -301,8 +227,12 @@ text-align: center;
 
 }
 
-.footer_part_left div{
-  margin-top: 8%;
+.footer_part_middle div{
+  margin-top: 4%;
+  text-align: center;
+}
+.footer_part_right div{
+  padding-left: 25%;
 }
 
 
@@ -321,13 +251,14 @@ text-align: center;
 .footer_part a{
   text-decoration: none;
   color: black;
-  font-size: 8pt;
+  font-size: 6pt;
 
 }
 
- .footer_part_left div{
-  margin-top: 20%;
-  font-size: 8pt;
+ .footer_part_middle div{
+ 
+  font-size: 6pt;
+  margin-top: 15%;
 }
 
 }
@@ -389,9 +320,9 @@ text-align: center;
 outline: none;
 border-color: black;
 border: 1px solid black;   
-/*padding-right: 4em;*/
+
 width:95%;
-/*height:50px;*/
+
 height: 5vh;
 margin-top: -6%;
 background-color: #FFF9F9;
@@ -403,9 +334,9 @@ background-color: #FFF9F9;
 outline: none;
 border-color: black;
 border: 1px solid black;   
-/*padding-right: 4em;*/
+
 width:95%;
-/*height:50px;*/
+
 height: 5vh;
 margin-top: -6%;
 background-color: #FFF9F9;
@@ -419,9 +350,9 @@ background-color: #FFF9F9;
 outline: none;
 border-color: black;
 border: 1px solid black;   
-/*padding-right: 4em;*/
+
 width:95%;
-/*height:50px;*/
+
 height: 20vh;
 margin-top: -1%;
 background-color: #FFF9F9;
@@ -434,9 +365,9 @@ background-color: #FFF9F9;
 outline: none;
 border-color: black;
 border: 1px solid black;   
-/*padding-right: 4em;*/
+
 width:95%;
-/*height:50px;*/
+
 height: 5vh;
 margin-top: -6%;
 background-color: #FFF9F9;
@@ -480,7 +411,7 @@ padding-bottom: 8%;
      text-decoration:none;
 
      border-radius:15px;
-    /*margin-left: 1%;*/
+
        border: 2px solid #FDFBFB;
        margin-bottom: 3%;
 
@@ -489,7 +420,7 @@ padding-bottom: 8%;
 
  }
 
- .comments_button_about:hover{
+ .contact_comments_button:hover{
      background-color: #FDFBFB;
        border-radius:15px;
      color: #EBCA94;
@@ -497,6 +428,46 @@ padding-bottom: 8%;
      border: 2px solid #EBCA94;
 
  }
+
+
+ .cart_comments_button:hover{
+     background-color: #FDFBFB;
+       border-radius:15px;
+     color: #EBCA94;
+     transition: all 0.5s;
+     border: 2px solid #EBCA94;
+
+ }
+
+ .contact_comments_button{
+
+  justify-content: center;
+
+    background-color: #EBCA94;
+     padding:0.5em 2em;
+     color:#FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+
+     border: 2px solid #EBCA94;
+}
+
+ .cart_comments_button{
+
+  justify-content: center;
+
+    background-color: #EBCA94;
+     padding:0.5em 2em;
+     color:#FDFBFB;
+     text-decoration:none;
+
+     border-radius:15px;
+
+     border: 2px solid #EBCA94;
+     margin-bottom: 3%;
+}
+
 
 
 
@@ -507,12 +478,12 @@ padding-bottom: 8%;
   /*border:2px solid red;*/
 
 }
-/*contact page new end */
+
 
 .submit_button {
 background-color: white;
 font-size: 16px;
-color: #272727;       /*black*/
+color: #272727;       
 padding-left: 2em;
 padding-right: 2em;
 border-color: #272727;    
@@ -532,11 +503,12 @@ text-align: center;
 /*contact page end*/
 
 
+
+
 /*cart update start*/
 
 
 
-/*cart page begin*/
 .cartPage_cart{
   width:90%;
   margin:auto;
@@ -633,7 +605,14 @@ text-align: center;
   margin-bottom: 20%;
 }
 
+
+.cart_comments_button{
+  font-size: 10pt;
+  margin-bottom: 10%;
 }
+
+}
+
 
 
 
@@ -680,10 +659,7 @@ text-align: center;
   .phoneView_nav{
     display:block;
   }
-/*
-  .page-header nav{
-    display:none;
-  }*/
+
 
 
   .ModularPatternElements-header_nav{
@@ -695,9 +671,7 @@ text-align: center;
     /*font-size:20pt;*/
   }
 
- /* .wholeModularPatternElements a{
-    display:block;
-  }*/
+
 
  .ModularPatternElements-header_icon{
   justify-content: space-between;
@@ -708,6 +682,18 @@ text-align: center;
   flex-direction: column;
 }
 
+.ModularPatternElements-header_icon{
+  display: none;
+}
+
+
+
+
+
+  .ModularPatternElements-header:hover .icon_part_nav{
+    display:flex;
+  
+  }
   
  }
 
